--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
