--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "framer-motion": "^11.18.2",
     "html2pdf.js": "^0.10.3",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
