--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/node": "20.6.2",
+    "@types/pg": "^8.15.5",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.4.0",
@@ -61,9 +62,12 @@
     "jspdf-autotable": "^5.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.446.0",
+    "mongodb": "^6.18.0",
     "mysql2": "^3.14.1",
+    "net": "^1.0.2",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
+    "pg": "^8.16.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
@@ -82,5 +86,9 @@
     "uuid": "^9.0.1",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/html2pdf.js": "^0.10.0",
+    "@types/uuid": "^10.0.0"
   }
 }
